--- a/REFACTO/composer.json
+++ b/REFACTO/composer.json
@@ -3,12 +3,12 @@
     "description": "Comprehensive testing suite for Joomla 1.0 refactoring project",
     "type": "project",
     "require": {
-        "php": ">=7.4"
+        "php": ">=8.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "squizlabs/php_codesniffer": "^3.0",
-        "sebastian/phpcpd": "^6.0"
+        "phpunit/phpunit": "10.5.26",
+        "sebastian/version": "4.0.0",
+        "squizlabs/php_codesniffer": "^3.10"
     },
     "autoload": {
         "psr-4": {
